phase3-deployment/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /blockchain
            pathType: Prefix
            backend:
              service:
                name: blockchain-service
                port:
                  number: 80
          - path: /qrcode
            pathType: Prefix
            backend:
              service:
                name: qrcode-service
                port:
                  number: 80
          - path: /twitter
            pathType: Prefix
            backend:
              service:
                name: recommendation-service
                port:
                  number: 80
